--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,8 @@
 
 
 body{
-    font-family: 'Hanken Grotesk', sans-serif;~    font-size: 16px;
+    font-family: 'Hanken Grotesk', sans-serif;
+    font-size: 16px;
     background-color: azure;
 }
 
